f5e66296-a68f-4fae-ab34-616938e14a6b/bc5fa525-1f32-4c53-bf17-b98dd59ff12e/9e747131-cfc7-4b99-bf38-6fccfc36af88/kubernates/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr-deployment-4ec9e601-c391-41e7-822b-0abbfbbdb77f
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: solr-4ec9e601-c391-41e7-822b-0abbfbbdb77f
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr-4ec9e601-c391-41e7-822b-0abbfbbdb77f
  template:
    metadata:
      labels:
        app: solr-4ec9e601-c391-41e7-822b-0abbfbbdb77f
    spec:
      containers:
        - name: solr-4ec9e601-c391-41e7-822b-0abbfbbdb77f
          image: ravi8881/2e49f282-85d5-4866-af7d-8133a75e6769-f5e66296-a68f-4fae-ab34-616938e14a6b-bc5fa525-1f32-4c53-bf17-b98dd59ff12e-9e747131-cfc7-4b99-bf38-6fccfc36af88:11.1.1
          ports:
            - containerPort: 8983
          volumeMounts:
            - name: solr-data-volume
              mountPath: /data # This path is where Solr looks for its cores
      volumes:
        - name: solr-data-volume
          persistentVolumeClaim:
            claimName: 9e747131-cfc7-4b99-bf38-6fccfc36af88 # This name must match the PVC metadata.name
      securityContext:
        runAsUser: 8983
        runAsGroup: 8983
        fsGroup: 8983
