f5e66296-a68f-4fae-ab34-616938e14a6b/bc5fa525-1f32-4c53-bf17-b98dd59ff12e/9e747131-cfc7-4b99-bf38-6fccfc36af88/kubernates/solr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solr-ingress-4ec9e601-c391-41e7-822b-0abbfbbdb77f
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: solr-4ec9e601-c391-41e7-822b-0abbfbbdb77f
spec:
  ingressClassName: nginx
  rules:
    - host: randr-b829hc.gyp4qe.us-east-2.febe.kbs
      http:
        paths:
          - path: /solr/
            pathType: Prefix
            backend:
              service:
                name: solr-service-4ec9e601-c391-41e7-822b-0abbfbbdb77f
                port:
                  number: 80
